apt-listchanges (2.85.10) UNRELEASED; urgency=low

  [ Pierre Habouzit ]
  * Remove myself from Maintainer/Uploader as I won't work on it anymore, put
    Sandro in charge, since well, it just makes reality official.

 -- Pierre Habouzit <madcoder@debian.org>  Wed, 09 May 2012 22:27:16 +0200

apt-listchanges (2.85.9) unstable; urgency=low

  * Add helpful message to exit from less; thanks to Stuart Prescott for report
    and patch; Closes: #633645
  * use _render() to show test in GTK frontend; Closes: #551537
  * add --since and --reverse to manpage; thanks to Rogério Brito for the
    report; Closes: #620548
  * bump Standards-Version to 3.9.2 (no changes needed)
  * fix build* targets
  * add source format + compression options
  * added Auto-Submitted header to mails; thanks to Lee Maguire for the report;
    Closes: #641228
  * Add the debconf Slovak PO file; thanks to Slavko for the patch;
    Closes: #614207

 -- Sandro Tosi <morph@debian.org>  Fri, 17 Feb 2012 21:32:26 +0100

apt-listchanges (2.85.8) unstable; urgency=low

  * Update the debconf Danish PO file; thanks to Joe Dalton; Closes: #610566
  * Don't skip the very first entry when the NEWS file is added; thanks to Ryo
    IGARASHI for the report and to Robert Luberda for the patch; Closes: #590541

 -- Sandro Tosi <morph@debian.org>  Tue, 31 May 2011 11:57:14 +0200

apt-listchanges (2.85.7) unstable; urgency=low

  * Update the program Catalan PO file; thanks to Jordi Mallach; Closes:
    #606799

 -- Sandro Tosi <morph@debian.org>  Sat, 11 Dec 2010 21:27:48 +0100

apt-listchanges (2.85.6) unstable; urgency=low

  * Update the program Danish PO file; thanks to Joe Dalton; Closes:
    #602226
  * Update the program Catalan PO file; thanks to Jordi Mallach
  * make postrm be idempotent; thanks to Gonzalo Pérez de Olaguer
    Córdoba; Closes: #602742
  * Update PO Debconf Chinese (traditional) translation; thanks to Asho
    Yeh

 -- Sandro Tosi <morph@debian.org>  Tue, 16 Nov 2010 22:20:39 +0100
